<resources>
    <string name="app_name" translatable="false">SoundLab</string>
    <string name="home" translatable="false">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="log_in">Log In</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="email" translatable="false">E-mail</string>
    <string name="password" translatable="false">Password</string>
    <string name="type_email">Type your e-mail here.</string>
    <string name="type_password">Type your password here.</string>
    <string name="dont_have_account">Don\'t you have an account?</string>
    <string name="panel">Panel</string>
    <string name="recently_listened">Recently Listened</string>
    <string name="default_title">Title</string>
    <string name="genres">Genres</string>
    <string name="genre">Genre</string>
    <string name="favourite_playlist">Favourite Playlist</string>
    <string name="playlist">Playlist</string>
    <string name="next" translatable="false">Next</string>
    <string name="Inizia" translatable="false">Inizia</string>
    <string name="artist">Artist</string>
    <string name="most_played">Most played by users</string>
    <string name="clicked_artist">Most clicked artists</string>
    <string name="searchbar_hint">Tracks, Artists …</string>
    <string name="type_username" translatable="false" />
    <string-array name="Seleziona">
        <item> </item>
        <item>Uomo</item>
        <item>Donna</item>
        <item>Altro</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>