<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.activity.LoginActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="0dp"
        android:layout_marginVertical="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/panel"
                android:layout_width="0dp"
                android:layout_height="530dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/panel"
                android:scaleType="fitXY"
                android:src="@drawable/panel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="105dp"
                android:layout_marginEnd="24dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo">

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/custom_text_input"
                    android:hint="@string/type_email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="#59000000"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints="password"
                    android:background="@drawable/custom_text_input"
                    android:ems="10"
                    android:hint="@string/type_password"
                    android:inputType="textPassword"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="#59000000"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="70dp" />

                <view.CustomButton
                    android:id="@+id/login_button"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:background="@drawable/button"
                    android:contentDescription="@string/log_in"
                    android:text="@string/log_in"
                    android:textAllCaps="false"
                    android:textSize="18sp"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dont_have_account" />

                <view.CustomButton
                    android:id="@+id/signup_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#00404040"
                    android:contentDescription="@string/sign_up"
                    android:shadowColor="@color/pink"
                    android:shadowDx="4"
                    android:shadowDy="1"
                    android:shadowRadius="20"
                    android:text="@string/sign_up"
                    android:textAllCaps="false" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>