<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context="view.fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/recently_listened"
            android:textSize="24sp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <model.CustomButton
                    android:id="@+id/cover1"
                    android:layout_width="120dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawableTop="@drawable/cover_default"
                    android:scaleType="fitStart"
                    android:singleLine="true"
                    android:text="@string/default_title"
                    android:textAllCaps="false"
                    android:textIsSelectable="false"
                    android:textSize="12sp"
                    android:textStyle="italic"/>

                <model.CustomButton
                    android:id="@+id/cover2"
                    android:layout_width="120dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawableTop="@drawable/cover_default"
                    android:scaleType="fitStart"
                    android:singleLine="true"
                    android:text="@string/default_title"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <model.CustomButton
                    android:id="@+id/cover3"
                    android:layout_width="120dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawableTop="@drawable/cover_default"
                    android:scaleType="fitStart"
                    android:singleLine="true"
                    android:text="@string/default_title"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    android:textStyle="italic" />


            </LinearLayout>
        </HorizontalScrollView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/genres"
            android:textSize="24sp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <model.CustomButton
                    android:id="@+id/genere1"
                    android:layout_width="160dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_buttons_generes"
                    android:backgroundTint="#944DD3"
                    android:singleLine="true"
                    android:text="@string/genre"
                    android:textAllCaps="false"
                    android:textSize="16sp" />

                <model.CustomButton
                    android:id="@+id/genere2"
                    android:layout_width="160dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_buttons_generes"
                    android:backgroundTint="#4243D4"
                    android:singleLine="true"
                    android:text="@string/genre"
                    android:textAllCaps="false"
                    android:textSize="16sp" />

                <model.CustomButton
                    android:id="@+id/genere3"
                    android:layout_width="160dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_buttons_generes"
                    android:backgroundTint="#51517F"
                    android:singleLine="true"
                    android:text="@string/genre"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>
        </HorizontalScrollView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/favourite_playlist"
            android:textSize="24sp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <model.CustomButton
                    android:id="@+id/playlist1"
                    android:layout_width="150dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawableTop="@drawable/playlist_default"
                    android:scaleType="fitStart"
                    android:singleLine="true"
                    android:text="@string/playlist"
                    android:textAllCaps="false"
                    android:textIsSelectable="false"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <model.CustomButton
                    android:id="@+id/playlist2"
                    android:layout_width="150dp"
                    android:layout_height="130dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawableTop="@drawable/playlist_default"
                    android:scaleType="fitStart"
                    android:singleLine="true"
                    android:text="@string/playlist"
                    android:textAllCaps="false"
                    android:textIsSelectable="false"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <model.CustomButton
                    android:id="@+id/playlist3"
                    android:layout_width="150dp"
                    android:layout_height="130dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawableTop="@drawable/playlist_default"
                    android:scaleType="fitStart"
                    android:singleLine="true"
                    android:text="@string/playlist"
                    android:textAllCaps="false"
                    android:textIsSelectable="false"
                    android:textSize="12sp"
                    android:textStyle="italic" />




            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>
</ScrollView>