<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    tools:context="view.fragment.SearchFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textSize="42sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_search_bar"
            app:iconifiedByDefault="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/head"
            app:queryBackground="@null"
            app:queryHint="@string/searchbar_hint" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/most_played"
                android:textSize="20sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <view.CustomButton
                        android:id="@+id/cover1"
                        android:layout_width="75dp"
                        android:layout_height="95dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:drawableTop="@drawable/cover_default_mini"
                        android:scaleType="fitStart"
                        android:singleLine="true"
                        android:text="@string/default_title"
                        android:textAllCaps="false"
                        android:textIsSelectable="false"
                        android:textSize="12sp"
                        android:textStyle="italic" />

                    <view.CustomButton
                        android:id="@+id/cover2"
                        android:layout_width="75dp"
                        android:layout_height="95dp"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:drawableTop="@drawable/cover_default_mini"
                        android:scaleType="fitStart"
                        android:singleLine="true"
                        android:text="@string/default_title"
                        android:textAllCaps="false"
                        android:textSize="12sp"
                        android:textStyle="italic" />

                    <view.CustomButton
                        android:id="@+id/cover3"
                        android:layout_width="75dp"
                        android:layout_height="95dp"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:drawableTop="@drawable/cover_default_mini"
                        android:scaleType="fitStart"
                        android:singleLine="true"
                        android:text="@string/default_title"
                        android:textAllCaps="false"
                        android:textSize="12sp"
                        android:textStyle="italic" />

                    <view.CustomButton
                        android:id="@+id/cover4"
                        android:layout_width="75dp"
                        android:layout_height="95dp"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:drawableTop="@drawable/cover_default_mini"
                        android:scaleType="fitStart"
                        android:singleLine="true"
                        android:text="@string/default_title"
                        android:textAllCaps="false"
                        android:textSize="12sp"
                        android:textStyle="italic" />

                </LinearLayout>
            </HorizontalScrollView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/clicked_artist"
                android:textSize="20sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <view.CustomButton
                        android:id="@+id/artist1"
                        android:layout_width="75dp"
                        android:layout_height="95dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:drawableTop="@drawable/artist_default_mini"
                        android:scaleType="fitStart"
                        android:singleLine="true"
                        android:text="@string/artist"
                        android:textAllCaps="false"
                        android:textIsSelectable="false"
                        android:textSize="12sp"
                        android:textStyle="italic" />

                    <view.CustomButton
                        android:id="@+id/artist2"
                        android:layout_width="75dp"
                        android:layout_height="95dp"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:drawableTop="@drawable/artist_default_mini"
                        android:scaleType="fitStart"
                        android:singleLine="true"
                        android:text="@string/artist"
                        android:textAllCaps="false"
                        android:textIsSelectable="false"
                        android:textSize="12sp"
                        android:textStyle="italic" />

                    <view.CustomButton
                        android:id="@+id/artist3"
                        android:layout_width="75dp"
                        android:layout_height="95dp"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:drawableTop="@drawable/artist_default_mini"
                        android:scaleType="fitStart"
                        android:singleLine="true"
                        android:text="@string/artist"
                        android:textAllCaps="false"
                        android:textIsSelectable="false"
                        android:textSize="12sp"
                        android:textStyle="italic" />

                    <view.CustomButton
                        android:id="@+id/artist4"
                        android:layout_width="75dp"
                        android:layout_height="95dp"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:drawableTop="@drawable/artist_default_mini"
                        android:scaleType="fitStart"
                        android:singleLine="true"
                        android:text="@string/artist"
                        android:textAllCaps="false"
                        android:textIsSelectable="false"
                        android:textSize="12sp"
                        android:textStyle="italic" />

                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>